prod/ns.n8n.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
