prod/service.n8n.server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  type: LoadBalancer
  selector:
    service: n8n
  ports:
  - name: n8n-internal-svc
    port: 80
    protocol: TCP
    targetPort: 80 #Container port
  - name: n8n-external-svc
    port: 443
    targetPort: 443
    protocol: TCP
