prod/ingress.n8n.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: n8n-letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  
    avp.kubernetes.io/path: "argocd/data/argocd-vault-plugin/n8n"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - <path:n8n_external_url>
    secretName: n8n-cert
  rules:
  - host: <path:n8n_external_url>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n-external
            port:
              number: 80
